[package]
name = "reusingthewheel-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

maud = "0.23.0"
comrak = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.3"
serde_yaml = "0.8.23"
chrono = { version = "0.4.19", features = ["serde"] }
walkdir = "2.3.2"
log = "0.4.17"
simplelog = "0.12.0"